# OOP-Cpp

./: .gitignore  readme.md
1. Stack in C/: CMakeLists.txt  task.txt
1. Stack in C/include/: Stack.h
1. Stack in C/src/: Stack.c  main.c
1. Stack in C/tests/: StackTest.cpp
2. STACK IN CPP/: CMakeLists.txt
2. STACK IN CPP/include/: Stack.h
2. STACK IN CPP/src/: Stack.cpp  main.cpp
2. STACK IN CPP/tests/: StackTest.cpp
3. EXTENDED STACK IN CPP, GDB/: task.txt
3. EXTENDED STACK IN CPP, GDB/0. C-style memory management/: .clang-format  CMakeLists.txt
3. EXTENDED STACK IN CPP, GDB/0. C-style memory management/src/: Stack.cpp
3. EXTENDED STACK IN CPP, GDB/0. C-style memory management/tests/: StackTest.cpp
3. EXTENDED STACK IN CPP, GDB/1. Modern CPP style/: CMakeLists.txt
3. EXTENDED STACK IN CPP, GDB/1. Modern CPP style/src/: Stack.cpp
3. EXTENDED STACK IN CPP, GDB/1. Unique pointers/: CMakeLists.txt
3. EXTENDED STACK IN CPP, GDB/1. Unique pointers/include/: Stack.h
3. EXTENDED STACK IN CPP, GDB/1. Unique pointers/src/: main.cpp
3. EXTENDED STACK IN CPP, GDB/1. Unique pointers/tests/: StackTest.cpp
3. EXTENDED STACK IN CPP, GDB/2. Vector stack/: CMakeLists.txt
3. EXTENDED STACK IN CPP, GDB/2. Vector stack/include/: Stack.h
3. EXTENDED STACK IN CPP, GDB/2. Vector stack/src/: Stack.cpp
3. EXTENDED STACK IN CPP, GDB/3. exceptions/: CMakeLists.txt
3. EXTENDED STACK IN CPP, GDB/3. exceptions/include/: Stack.h
3. EXTENDED STACK IN CPP, GDB/3. exceptions/src/: Stack.cpp  main.cpp
3. EXTENDED STACK IN CPP, GDB/3. exceptions/tests/: StackTest.cpp
4. COMPLEX NUMBER/: CMakeLists.txt  task.txt
4. COMPLEX NUMBER/include/: Complex.h
4. COMPLEX NUMBER/src/: Complex.cpp  main.cpp
4. COMPLEX NUMBER/tests/: ComplexTest.cpp
5. Polynomial/: CMakeLists.txt  task.txt
5. Polynomial/include/: Poly.h
5. Polynomial/src/: Poly.cpp  main.cpp
6. MATRIX/: CMakeLists.txt
6. MATRIX/include/: Matrix.h  MatrixExceptions.h
6. MATRIX/src/: Matrix.cpp  MatrixExceptions.cpp  main.cpp
6. MATRIX/tests/: MatrixTest.cpp
7. PACMAN/: CMakeLists.txt
7. PACMAN/include/: Config.h  Game.h  Ghost.h  Items.h
7. PACMAN/src/: Game.cpp  Ghost.cpp  Items.cpp  main.cpp
